<resources>
    <string name="app_name">LoginApp</string>
    <string name="signUpTitle">Registro</string>
    <string name="fullname_field">Nombre Completo</string>
    <string name="repeat_password_field">Repetir Password</string>
    <string name="signUpButtonName">Registrarme</string>
    <string name="i_have_an_account_link">Ya tengo una cuenta.</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="email_field">email</string>
    <string name="password_field">contraseña</string>
    <string name="login_button">LOGEARME</string>
    <string name="i_need_an_account_link">No tengo cuenta.</string>
    <string name="welcome_title">Bienvenido</string>
    <string name="pass_recovery_link">Olvidé mi contraseña</string>
    <string name="pass_recovery_title">Recuperar Contraseña</string>
    <string name="recovery_email_field_hint">recovery@email.com</string>
    <string name="pass_recovery_button">Recuperar contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="txt_logout">Cerrar Sesión</string>
</resources>
